--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,8 @@
-/* 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-body {
-  font-family: 'Poppins', sans-serif;
-} */
+* {
+  margin: 0;
+  scroll-behavior: smooth;
+  padding: 0;
+}
+.font-loader {
+  font-family: "poppins";
+}
