--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,10 @@
 * {
   margin: 0;
-  scroll-behavior: smooth;
   padding: 0;
+  scroll-behavior: smooth;
+}
+body {
+  overflow-x: hidden;
 }
 .font-loader {
   font-family: "poppins";
